Replace windows slashes and handle relative uris